# mf2t

./: .gitignore  CMakeLists.txt  Makefile  README.md  mf2t.c  t2mf.c  t2mf.fl  t2mf.h  t2mflex.c
libmidifile-20150710/: Makefile  midifile.c  midifile.h  midifile_read.c  midifile_time.c  midifile_write.c
